# TensorRT-Solo

./: CMakeLists.txt  LICENSE  README.MD  cuda_engine.cpp  test_gpupost.cpp
include/: config.h  postprocess.h  postprocess_gpu.h  resize.h  seg_conv.h  trt.h  util.h
script/: get_model_gn.py
src/: CMakeLists.txt  postprocess.cpp  postprocess_gpu.cu  resize.cu  seg_conv.cu  trt.cpp
